--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -22,19 +22,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/radost">Радость</a>
+                        <a class="nav-link" href="/emotions/radost">Радость</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/gnev">Гнев</a>
+                        <a class="nav-link" href="/emotions/gnev">Гнев</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/pechal">Печаль</a>
+                        <a class="nav-link" href="/emotions/pechal">Печаль</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/brezglivost">Брезгливость</a>
+                        <a class="nav-link" href="/emotions/brezglivost">Брезгливость</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/strah">Страх</a>
+                        <a class="nav-link" href="/emotions/strah">Страх</a>
                     </li>
                 </ul>
             </div>
