--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -21,21 +21,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <% if(typeof nav == 'object' && nav){
+                        nav.forEach(function(item){
+                        %>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="/emotions/radost">Радость</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/emotions/gnev">Гнев</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/emotions/pechal">Печаль</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/emotions/brezglivost">Брезгливость</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/emotions/strah">Страх</a>
-                    </li>
+                        <a class="nav-link" href="/emotions/<%= item.nick %>"><%=
+                            item.title %></a>
+                            </li>
+                            <%
+                                })}
+                            %>
                 </ul>
             </div>
         </div>
